--- a/beacon/public/assets/css/register.css
+++ b/beacon/public/assets/css/register.css
@@ -145,6 +145,7 @@ body {
 
 /* Form Container */
 .auth-form-container {
+    width: 100%;
     max-width: 1200px;
     display: flex;
     align-items: flex-start;
